# basic_programming_homework

./: .gitignore
01/task_01/: task_01.sln
02/task_01/: task_01.sln
02/task_02/: task_02.sln
02/task_03/: task_03.sln
03/task_01/: task_01.sln
03/task_02/: task_02.sln
04/task_01/: task_01.sln
04/task_02/: task_02.sln
05/task_01/: task_01.sln
05/task_02/: task_02.sln
05/task_03/: task_03.sln
06/task_01/: task_01.sln
06/task_01/task_01/: func.h  (+4 more)
06/task_02/: task_02.sln
06/task_03/: task_03.sln
07/task_01/: task_01.sln
07/task_02/: task_02.sln
08/task_01/: task_01.sln
08/task_02/: task_02.sln
09/task_01/: task_01.sln
09/task_02/: task_02.sln
10/task_01/: CMakeLists.txt  main.cpp
10/task_02/task_02/: CMakeLists.txt  Equilateral_triangle.h  Isosceles_triangle.h  Parallelogram.cpp  Quadrilateral.h  Rectangle.cpp  Square.h  Triangle.cpp  task_02.cpp  task_02.vcxproj.filters
11/task_01/: task_01.sln
11/task_02/: task_02.sln
11/task_03/: CMakeLists.txt  leaver.cpp  leaver.h
Coursework/Coursework/: Coursework.vcxproj
Coursework/CourseworkDLL/: Air Vehicle.cpp  Air Vehicle.h  All Terrain Boots.cpp  All Terrain Boots.h  Camel.cpp  Centaur.cpp  Centaur.h  CourseworkDLL.sln  CourseworkDLL.vcxproj  CourseworkDLL.vcxproj.filters  Eagle.cpp  Land Vehicle.cpp  Land Vehicle.h  Racing.cpp  Vehicle.cpp  Vehicle.h  Vehicle_Registration.h
Coursework/Coursework_CMake/: Aeroplane_Carpet.cpp  Aeroplane_Carpet.h  Broom.cpp  Broom.h  CMakeLists.txt  Camel.h  Coursework.cpp  Eagle.h  Fast_Camel.cpp  Fast_Camel.h  Racing.h  Vehicle_Registration.cpp
(+85 files in other folders)
